# fouriax

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
artifacts/: metaatom_opt_summary.json  onn_mnist_summary.json  propagator_sweep_report.csv  propagator_sweep_report.json
artifacts/4f_sweep/: sweep_metrics.csv
docs/: ARCHITECTURE.md  DEVELOPMENT_WORKFLOW.md  HANDOFF.md  PLANNED_ADDITIONS.md  PROJECT_STATUS.md  README.md  TODO.md  USER_GUIDE.md  conf.py  index.md
docs/_static/: custom.css
docs/api/: advanced.md  core.md  (+3 more)
examples/: 4f_correlator_example.ipynb  4f_edge_optimization_example.ipynb  AGENTS.md  hologram_coherent_logo_example.ipynb  holography_polarized_dual_example.ipynb  incoherent_camera_example.ipynb  lens_optimization_example.ipynb  metaatom_optimization_example.ipynb  onn_mnist_example.ipynb  spectral_filter_optimization_example.ipynb
experiments/: AGENTS.md  rgb_e2e_cnn.py  rgb_incoherent_imager_d_opt.py  spectral_filter_optimization.py
scripts/: 4f_comparison_example.py  4f_comparison_sweep.py  4f_correlator_example.py  4f_edge_optimization_example.py  asm_psf_library_vs_manual.py  codex_fast_check.sh  dev_setup.sh  hologram_coherent_logo_example.py  holography_polarized_dual_example.py  incoherent_camera_example.py  kspace_stop_example.py  lens_benchmark_plot.py  lens_optimization_example.py  lint_local.sh  metaatom_optimization_example.py  nyquist_factor_convergence_plot.py  onn_mnist_example.py  propagator_regime_comparison_plot.py  propagator_sweep_report.py  spectral_filter_optimization.py  spectral_filter_optimization_example.py  sweep_spectral_filter_training.py  sync_example_notebook.py  tests_local.sh
tests/: test_camera_sensor.py  test_example_notebook_sync.py  test_examples.py  test_fftconvolve.py  test_field_domain.py  test_fisher.py  test_incoherent_propagation.py  test_jones_polarization.py  test_k_layers.py  test_lens_benchmark.py  test_lens_optimization.py  test_meta_atoms.py  test_monitors.py  test_na_schedule.py  test_onn_mnist_gpu.py  test_optical_module.py  test_optim_progress.py  test_planning.py  test_propagation_selection.py  test_sensor_noise.py  test_sparse_losses.py
(+204 files in other folders)
